--- a/.github/workflows/build-seed.yml
+++ b/.github/workflows/build-seed.yml
@@ -1,16 +1,35 @@
 name: Build Seed Executable
+
 on:
   push:
     tags:
       - "v*"
+
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]   # 🆕 build on Linux *and* Windows
+    runs-on: ${{ matrix.os }}
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
-        with: { python-version: "3.12" }
-      - run: pip install pyinstaller
-      - run: pyinstaller --onefile core/seed_bootstrap.py
-      - uses: actions/upload-artifact@v4
-        with: { name: seed-binaries, path: dist/seed_bootstrap* }
+        with:
+          python-version: "3.12"
+
+      - name: Install PyInstaller
+        run: pip install pyinstaller
+
+      - name: Build executable
+        run: |
+          pyinstaller --onefile core/seed_bootstrap.py
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          # Each OS gets its own ZIP: seed-binaries-ubuntu, seed-binaries-windows
+          name: seed-binaries-${{ matrix.os }}
+          path: |
+            dist/seed_bootstrap*
