--- a/modules/env_detector/Dockerfile
+++ b/modules/env_detector/Dockerfile
@@ -1,6 +1,13 @@
 FROM python:3.12-slim
+
 WORKDIR /app
+
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+
+RUN apt-get update && apt-get install -y procps && \
+    pip install --no-cache-dir -r requirements.txt && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
 COPY . .
+
 CMD ["python", "env_detector.py"]
